add google font

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -35,6 +35,10 @@
       src="https://kit.fontawesome.com/464e5d5d58.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
